--- a/index.html
+++ b/index.html
@@ -1,26 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Order Form</title>
+  <title>Hamsa Sarees - Shop Now</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f0f0f0;
+      background: #f8f8f8;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background: #b30059;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
       padding: 20px;
     }
-    .container {
-      max-width: 450px;
-      margin: auto;
+
+    .product-card {
       background: white;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-    h2 {
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
-      margin-bottom: 20px;
     }
-    input, textarea, button {
+
+    .product-card img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 10px;
+      background: #ddd;
+    }
+
+    .product-card h3 {
+      margin: 15px 0 10px;
+    }
+
+    .btn {
+      background: #b30059;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 10px;
+      font-size: 16px;
+    }
+
+    .btn:hover {
+      background: #99004d;
+    }
+
+    /* Form Popup */
+    #orderPopup {
+      display: none;
+      background: white;
+      width: 90%;
+      max-width: 400px;
+      padding: 20px;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      border-radius: 12px;
+      z-index: 999;
+    }
+
+    .close-btn {
+      float: right;
+      cursor: pointer;
+      font-weight: bold;
+      color: #b30059;
+    }
+
+    input, button {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
@@ -28,30 +92,55 @@
       border: 1px solid #ccc;
       font-size: 16px;
     }
-    button {
-      background: #4CAF50;
-      color: white;
-      cursor: pointer;
-      border: none;
-    }
-    button:hover {
-      background: #45A049;
-    }
-    .success-msg {
-      display: none;
-      font-size: 18px;
-      color: green;
-      margin-top: 15px;
+
+    #success {
       text-align: center;
+      color: green;
+      font-size: 18px;
+      display: none;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-<div class="container">
-  <h2>Order Now</h2>
+<header>Hamsa Sarees - Shop Now</header>
 
-  <!-- Hidden iframe to stop redirect -->
+<!-- PRODUCT LIST -->
+<div class="products">
+
+  <!-- PRODUCT 1 -->
+  <div class="product-card">
+    <img src="IMAGE1.jpg" alt="Product 1">
+    <h3>Beautiful Silk Saree</h3>
+    <p>₹2,499</p>
+    <button class="btn" onclick="addToCart('Beautiful Silk Saree')">Add to Cart</button>
+  </div>
+
+  <!-- PRODUCT 2 -->
+  <div class="product-card">
+    <img src="IMAGE2.jpg" alt="Product 2">
+    <h3>Royal Designer Saree</h3>
+    <p>₹3,299</p>
+    <button class="btn" onclick="addToCart('Royal Designer Saree')">Add to Cart</button>
+  </div>
+
+  <!-- PRODUCT 3 -->
+  <div class="product-card">
+    <img src="IMAGE3.jpg" alt="Product 3">
+    <h3>Traditional Kanchipuram Saree</h3>
+    <p>₹4,999</p>
+    <button class="btn" onclick="addToCart('Traditional Kanchipuram Saree')">Add to Cart</button>
+  </div>
+
+</div>
+
+<!-- ORDER POPUP (Google Form Integrated) -->
+<div id="orderPopup">
+  <span class="close-btn" onclick="closePopup()">✖</span>
+  <h3>Complete Your Order</h3>
+
+  <!-- Hidden iframe so Google Form does NOT redirect -->
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
   <form 
@@ -62,30 +151,40 @@
   >
 
     <label>Name</label>
-    <input type="text" name="entry.1128392407" placeholder="Enter your name" required>
+    <input type="text" name="entry.1128392407" required>
 
     <label>Address</label>
-    <input type="text" name="entry.654904844" placeholder="Enter your address" required>
+    <input type="text" name="entry.654904844" required>
 
     <label>Mobile Number</label>
-    <input type="tel" name="entry.1644126654" placeholder="Enter mobile number" required>
+    <input type="tel" name="entry.1644126654" required>
 
     <label>Product</label>
-    <input type="text" name="entry.1866699911" placeholder="Product name" required>
+    <input id="productField" type="text" name="entry.1866699911" readonly required>
 
-    <button type="submit">Submit Order</button>
+    <button type="submit">Place Order</button>
   </form>
 
-  <div class="success-msg" id="success">
-    ✔ Your order has been submitted!
-  </div>
+  <div id="success">✔ Order Submitted Successfully!</div>
+
 </div>
 
 <script>
   var submitted = false;
+
+  function addToCart(productName) {
+    document.getElementById("productField").value = productName;
+    document.getElementById("orderPopup").style.display = "block";
+  }
+
+  function closePopup() {
+    document.getElementById("orderPopup").style.display = "none";
+  }
+
   document.getElementById('hidden_iframe').onload = function() {
     if (submitted) {
       document.getElementById("success").style.display = "block";
+      submitted = false;
     }
   };
 </script>
