--- a/index.html
+++ b/index.html
@@ -123,5 +123,32 @@ function orderNow(product){
 }
 </script>
 
+<!-- Confirm Dialog -->
+<div id="confirmDialog" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); display:flex; justify-content:center; align-items:center; padding:20px;">
+  <div style="background:white; padding:20px; border-radius:12px; width:90%; max-width:350px; text-align:center;">
+    <h3 style="font-size:20px; font-weight:bold; margin-bottom:10px;">Confirm and Place Your Order</h3>
+    <p style="margin-bottom:15px;">Are you sure you want to order this product?</p>
+    <button id="confirmOrderBtn" style="width:100%; padding:10px; background:green; color:white; border:none; border-radius:8px; margin-bottom:10px; font-size:16px;">Place Order</button>
+    <button id="cancelDialogBtn" style="width:100%; padding:10px; background:#777; color:white; border:none; border-radius:8px; font-size:16px;">Cancel</button>
+  </div>
+</div>
+<script>
+let pendingProduct = '';
+
+function orderNow(product){
+  pendingProduct = product;
+  document.getElementById('confirmDialog').style.display = 'flex';
+}
+
+document.getElementById('cancelDialogBtn').onclick = function(){
+  document.getElementById('confirmDialog').style.display = 'none';
+};
+
+document.getElementById('confirmOrderBtn').onclick = function(){
+  document.getElementById('productField').value = pendingProduct;
+  document.getElementById('confirmDialog').style.display = 'none';
+  window.scrollTo({ top: document.getElementById('orderForm').offsetTop, behavior: 'smooth' });
+};
+</script>
 </body>
 </html>
