--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
 </div>
 
 <script>
+document.addEventListener('DOMContentLoaded', function(){
 function orderNow(product){
   document.getElementById('productField').value = product;
   window.scrollTo({ top: document.getElementById('orderForm').offsetTop, behavior: 'smooth' });
 }
+});
 </script>
 
 <!-- Confirm Dialog -->
@@ -148,6 +150,34 @@ document.getElementById('confirmOrderBtn').onclick = function(){
   document.getElementById('productField').value = pendingProduct;
   document.getElementById('confirmDialog').style.display = 'none';
   window.scrollTo({ top: document.getElementById('orderForm').offsetTop, behavior: 'smooth' });
+};
+</script>
+<!-- Confirm Dialog Box -->
+<div id="confirmDialog" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); display:flex; justify-content:center; align-items:center; z-index:9999;">
+  <div style="background:#fff; padding:20px; border-radius:12px; width:90%; max-width:350px; text-align:center; box-shadow:0 0 10px rgba(0,0,0,0.3);">
+    <h3 style="font-size:20px; font-weight:bold; margin-bottom:10px;">Confirm Order</h3>
+    <p style="margin-bottom:15px;">Are you sure you want to place this order?</p>
+    <button id="confirmOrderBtn" style="width:100%; padding:12px; background:#28a745; color:#fff; border:none; border-radius:8px; font-size:16px; margin-bottom:10px;">Yes, Place Order</button>
+    <button id="cancelDialogBtn" style="width:100%; padding:12px; background:#777; color:#fff; border:none; border-radius:8px; font-size:16px;">Cancel</button>
+  </div>
+</div>
+
+<script>
+let selectedProduct = '';
+
+function orderNow(product) {
+  selectedProduct = product;
+  document.getElementById('confirmDialog').style.display = 'flex';
+}
+
+document.getElementById('cancelDialogBtn').onclick = function() {
+  document.getElementById('confirmDialog').style.display = 'none';
+};
+
+document.getElementById('confirmOrderBtn').onclick = function() {
+  document.getElementById('productField').value = selectedProduct;
+  document.getElementById('confirmDialog').style.display = 'none';
+  window.scrollTo({ top: document.getElementById('orderForm').offsetTop, behavior:'smooth' });
 };
 </script>
 </body>
