--- a/index.html
+++ b/index.html
@@ -3,182 +3,82 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Cloth Shop</title>
+<title>Hamsa Sarees - Online Shop</title>
 <style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #f5f5f5;
-  }
-  header {
-    background: #222;
-    color: #fff;
-    padding: 15px;
-    text-align: center;
-    font-size: 22px;
-    font-weight: bold;
-  }
-  .container {
-    max-width: 900px;
-    margin: auto;
-    padding: 15px;
-  }
-  .product-card {
-    background: #fff;
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    margin-bottom: 20px;
-  }
-  .product-img {
-    width: 100%;
-    height: 300px;
-    background: #ddd;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    color: #555;
-  }
-  .product-title {
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  .price {
-    color: green;
-    font-size: 18px;
-    margin: 8px 0;
-  }
-  button {
-    width: 100%;
-    padding: 12px;
-    background: #e91e63;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  button:hover {
-    background: #c2185b;
-  }
-  form {
-    background: #fff;
-    padding: 15px;
-    margin-top: 25px;
-    border-radius: 10px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
-  }
-  input, textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 12px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-  }
-  @media(max-width:600px){
-    .product-img { height: 200px; }
-    button { font-size: 16px; }
-  }
+  body { margin:0; font-family:Arial, sans-serif; background:#f5f5f5; }
+  header { background:#222; color:#fff; padding:15px; text-align:center; font-size:22px; font-weight:bold; }
+  .container { max-width:1000px; margin:auto; padding:15px; }
+  .product-card { background:#fff; border-radius:12px; padding:15px; box-shadow:0 0 8px rgba(0,0,0,0.1); margin-bottom:22px; }
+  .product-img { width:100%; height:300px; background:#ddd; border-radius:12px; display:flex; align-items:center; justify-content:center; font-size:18px; color:#555; }
+  .product-title { font-size:20px; font-weight:bold; margin-top:12px; }
+  .price { font-size:18px; color:green; margin:8px 0; }
+  .order-btn { width:100%; padding:12px; background:#e91e63; color:white; border:none; border-radius:8px; font-size:18px; cursor:pointer; }
+  .order-btn:hover { background:#c2185b; }
+  /* ORDER FORM POPUP */
+  #confirmDialog { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:99999; justify-content:center; align-items:center; padding:20px; }
+  #dialogBox { background:white; padding:20px; border-radius:12px; width:95%; max-width:400px; box-shadow:0 0 10px rgba(0,0,0,0.3); }
+  #dialogBox h2 { text-align:center; margin-bottom:12px; }
+  input, textarea { width:100%; padding:10px; margin-bottom:12px; border:1px solid #ccc; border-radius:8px; font-size:16px; }
+  #submitBtn { background:green; color:white; padding:12px; width:100%; border:none; border-radius:8px; font-size:18px; }
+  #cancelBtn { background:#777; color:white; padding:10px; width:100%; border:none; border-radius:8px; font-size:16px; margin-top:8px; }
+  @media(max-width:600px){ .product-img { height:200px; } }
 </style>
 </head>
 <body>
 <header>Hamsa Sarees - Online Shop</header>
 <div class="container">
 
+  <!-- PRODUCT 1 -->
   <div class="product-card">
     <div class="product-img" id="img1">Upload Image Here</div>
     <div class="product-title">Beautiful Saree</div>
     <div class="price">₹1499</div>
-    <button onclick="orderNow('Beautiful Saree')">Order Now</button>
+    <button class="order-btn" onclick="openOrder('Beautiful Saree')">Order Now</button>
   </div>
 
+  <!-- PRODUCT 2 -->
   <div class="product-card">
     <div class="product-img" id="img2">Upload Image Here</div>
     <div class="product-title">Designer Saree</div>
     <div class="price">₹1799</div>
-    <button onclick="orderNow('Designer Saree')">Order Now</button>
+    <button class="order-btn" onclick="openOrder('Designer Saree')">Order Now</button>
   </div>
 
-  <!-- Add more products if needed -->
-
-  <form id="orderForm" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse" target="hiddenFrame">
-    <h2>Place Your Order</h2>
-    <input type="text" name="entry.1128392407" placeholder="Your Name" required />
-    <textarea name="entry.654904844" placeholder="Address" required></textarea>
-    <input type="tel" name="entry.1644126654" placeholder="Mobile Number" required />
-    <input type="text" id="productField" name="entry.1866699911" placeholder="Selected Product" readonly required />
-    <button type="submit">Submit Order</button>
-  </form>
-  <iframe name="hiddenFrame" style="display:none;"></iframe>
 </div>
 
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-function orderNow(product){
-  document.getElementById('productField').value = product;
-  window.scrollTo({ top: document.getElementById('orderForm').offsetTop, behavior: 'smooth' });
-}
-});
-</script>
+<!-- ORDER POPUP -->
+<div id="confirmDialog">
+  <div id="dialogBox">
+    <h2>Confirm Your Order</h2>
+    <p id="selectedProduct" style="font-size:16px; text-align:center; margin-bottom:15px;"></p>
 
-<!-- Confirm Dialog -->
-<div id="confirmDialog" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); display:flex; justify-content:center; align-items:center; padding:20px;">
-  <div style="background:white; padding:20px; border-radius:12px; width:90%; max-width:350px; text-align:center;">
-    <h3 style="font-size:20px; font-weight:bold; margin-bottom:10px;">Confirm and Place Your Order</h3>
-    <p style="margin-bottom:15px;">Are you sure you want to order this product?</p>
-    <button id="confirmOrderBtn" style="width:100%; padding:10px; background:green; color:white; border:none; border-radius:8px; margin-bottom:10px; font-size:16px;">Place Order</button>
-    <button id="cancelDialogBtn" style="width:100%; padding:10px; background:#777; color:white; border:none; border-radius:8px; font-size:16px;">Cancel</button>
+    <form id="orderForm" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse" target="hiddenFrame">
+      <input type="text" name="entry.1128392407" placeholder="Your Name" required />
+      <textarea name="entry.654904844" placeholder="Address" required></textarea>
+      <input type="tel" name="entry.1644126654" placeholder="Mobile Number" required />
+      <input type="text" id="productField" name="entry.1866699911" readonly />
+      <button id="submitBtn">Place Order</button>
+    </form>
+
+    <button id="cancelBtn" onclick="closeOrder()">Cancel</button>
   </div>
 </div>
-<script>
-let pendingProduct = '';
 
-function orderNow(product){
-  pendingProduct = product;
-  document.getElementById('confirmDialog').style.display = 'flex';
-}
-
-document.getElementById('cancelDialogBtn').onclick = function(){
-  document.getElementById('confirmDialog').style.display = 'none';
-};
-
-document.getElementById('confirmOrderBtn').onclick = function(){
-  document.getElementById('productField').value = pendingProduct;
-  document.getElementById('confirmDialog').style.display = 'none';
-  window.scrollTo({ top: document.getElementById('orderForm').offsetTop, behavior: 'smooth' });
-};
-</script>
-<!-- Confirm Dialog Box -->
-<div id="confirmDialog" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); display:flex; justify-content:center; align-items:center; z-index:9999;">
-  <div style="background:#fff; padding:20px; border-radius:12px; width:90%; max-width:350px; text-align:center; box-shadow:0 0 10px rgba(0,0,0,0.3);">
-    <h3 style="font-size:20px; font-weight:bold; margin-bottom:10px;">Confirm Order</h3>
-    <p style="margin-bottom:15px;">Are you sure you want to place this order?</p>
-    <button id="confirmOrderBtn" style="width:100%; padding:12px; background:#28a745; color:#fff; border:none; border-radius:8px; font-size:16px; margin-bottom:10px;">Yes, Place Order</button>
-    <button id="cancelDialogBtn" style="width:100%; padding:12px; background:#777; color:#fff; border:none; border-radius:8px; font-size:16px;">Cancel</button>
-  </div>
-</div>
+<iframe name="hiddenFrame" style="display:none;"></iframe>
 
 <script>
 let selectedProduct = '';
 
-function orderNow(product) {
+function openOrder(product){
   selectedProduct = product;
+  document.getElementById('productField').value = product;
+  document.getElementById('selectedProduct').innerText = "You are ordering: " + product;
   document.getElementById('confirmDialog').style.display = 'flex';
 }
 
-document.getElementById('cancelDialogBtn').onclick = function() {
+function closeOrder(){
   document.getElementById('confirmDialog').style.display = 'none';
-};
-
-document.getElementById('confirmOrderBtn').onclick = function() {
-  document.getElementById('productField').value = selectedProduct;
-  document.getElementById('confirmDialog').style.display = 'none';
-  window.scrollTo({ top: document.getElementById('orderForm').offsetTop, behavior:'smooth' });
-};
+}
 </script>
 </body>
 </html>
