--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   input, textarea { width:100%; padding:10px; margin-bottom:12px; border:1px solid #ccc; border-radius:8px; font-size:16px; }
   #submitBtn { background:green; color:white; padding:12px; width:100%; border:none; border-radius:8px; font-size:18px; }
   #cancelBtn { background:#777; color:white; padding:10px; width:100%; border:none; border-radius:8px; font-size:16px; margin-top:8px; }
+  #successMsg { display:none; color:green; font-size:18px; text-align:center; margin-top:10px; }
   @media(max-width:600px){ .product-img { height:200px; } }
 </style>
 </head>
@@ -52,7 +53,7 @@
     <h2>Confirm Your Order</h2>
     <p id="selectedProduct" style="font-size:16px; text-align:center; margin-bottom:15px;"></p>
 
-    <form id="orderForm" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse" target="hiddenFrame">
+    <form id="orderForm" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse" target="hiddenFrame" onsubmit="showSuccess(event)">
       <input type="text" name="entry.1128392407" placeholder="Your Name" required />
       <textarea name="entry.654904844" placeholder="Address" required></textarea>
       <input type="tel" name="entry.1644126654" placeholder="Mobile Number" required />
@@ -61,6 +62,7 @@
     </form>
 
     <button id="cancelBtn" onclick="closeOrder()">Cancel</button>
+    <div id="successMsg">Your order placed successfully!</div>
   </div>
 </div>
 
@@ -74,10 +76,20 @@ function openOrder(product){
   document.getElementById('productField').value = product;
   document.getElementById('selectedProduct').innerText = "You are ordering: " + product;
   document.getElementById('confirmDialog').style.display = 'flex';
+  document.getElementById('successMsg').style.display = 'none';
 }
 
 function closeOrder(){
   document.getElementById('confirmDialog').style.display = 'none';
+}
+
+function showSuccess(event){
+  event.preventDefault();
+  document.getElementById('successMsg').style.display = 'block';
+  document.getElementById('orderForm').reset();
+  setTimeout(closeOrder, 3000);
+  // submit the form to Google Form in hidden iframe
+  document.getElementById('orderForm').submit();
 }
 </script>
 </body>
