--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <title>Hamsa Sarees - Online Shop</title>
 <style>
   body { margin:0; font-family:Arial, sans-serif; background:#f5f5f5; }
-  header { background:#222; color:#fff; padding:15px; text-align:center; font-size:22px; font-weight:bold; }
+  header { background:#222; color:#fff; padding:15px; text-align:center; font-size:22px; font-weight:bold; display:flex; align-items:center; justify-content:space-between; gap:12px; }
+  .header-left { flex:1; text-align:center; }
+  .header-right { color:#fff; padding-right:12px; font-size:14px; }
   .container { max-width:1000px; margin:auto; padding:15px; }
   .product-card { background:#fff; border-radius:12px; padding:15px; box-shadow:0 0 8px rgba(0,0,0,0.1); margin-bottom:22px; }
   .product-img { width:100%; height:300px; background:#ddd; border-radius:12px; display:flex; align-items:center; justify-content:center; font-size:18px; color:#555; }
@@ -14,6 +16,18 @@
   .price { font-size:18px; color:green; margin:8px 0; }
   .order-btn { width:100%; padding:12px; background:#e91e63; color:white; border:none; border-radius:8px; font-size:18px; cursor:pointer; }
   .order-btn:hover { background:#c2185b; }
+
+  /* LOGIN MODAL (shows first) */
+  #loginModal { position:fixed; inset:0; display:flex; align-items:center; justify-content:center; background:rgba(0,0,0,0.7); z-index:100000; }
+  #loginBox { background:white; padding:20px; border-radius:12px; width:95%; max-width:420px; box-shadow:0 0 20px rgba(0,0,0,0.4); }
+  #loginBox h2 { margin:0 0 12px 0; text-align:center; }
+  #loginBox input { width:100%; padding:10px; margin-bottom:12px; border:1px solid #ccc; border-radius:8px; font-size:16px; }
+  #loginButtons { display:flex; gap:10px; }
+  .btn { padding:10px; border-radius:8px; border:none; cursor:pointer; font-size:16px; flex:1; }
+  .btn-primary { background:#2196f3; color:white; }
+  .btn-ghost { background:#eee; color:#333; }
+  #loginErr { color:red; text-align:center; margin-bottom:8px; display:none; }
+
   /* ORDER FORM POPUP */
   #confirmDialog { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:99999; justify-content:center; align-items:center; padding:20px; }
   #dialogBox { background:white; padding:20px; border-radius:12px; width:95%; max-width:400px; box-shadow:0 0 10px rgba(0,0,0,0.3); }
@@ -26,7 +40,15 @@
 </style>
 </head>
 <body>
-<header>Hamsa Sarees - Online Shop</header>
+
+<header>
+  <div class="header-left">Hamsa Sarees - Online Shop</div>
+  <div class="header-right" id="userArea">
+    <span id="userName" style="display:none"></span>
+    <button id="signOutBtn" style="display:none; margin-left:10px; background:#ff5252; color:white; border:none; padding:8px 10px; border-radius:8px; cursor:pointer;">Sign Out</button>
+  </div>
+</header>
+
 <div class="container">
 
   <!-- PRODUCT 1 -->
@@ -68,31 +90,140 @@
 
 <iframe name="hiddenFrame" style="display:none;"></iframe>
 
-<script>
-let selectedProduct = '';
+<!-- LOGIN MODAL (shown first) -->
+<div id="loginModal">
+  <div id="loginBox">
+    <h2>Sign in to continue</h2>
+    <div id="loginErr"></div>
+    <input type="email" id="loginEmail" placeholder="Email" required />
+    <input type="password" id="loginPass" placeholder="Password" required />
+    <div id="loginButtons">
+      <button class="btn btn-primary" id="signInBtn">Sign In</button>
+      <button class="btn btn-ghost" id="signUpBtn">Create Account</button>
+    </div>
+    <p style="text-align:center; margin-top:10px; font-size:13px; color:#666;">By signing in you can place orders. No account info is stored on this page.</p>
+  </div>
+</div>
 
+<script>
+// UI helpers and order control
+let selectedProduct = '';
 function openOrder(product){
+  // ensure user is signed in
+  if(!window.currentUser){
+    // show login modal if not signed in
+    document.getElementById('loginModal').style.display = 'flex';
+    document.getElementById('loginErr').innerText = 'Please sign in first to place an order.';
+    document.getElementById('loginErr').style.display = 'block';
+    return;
+  }
   selectedProduct = product;
   document.getElementById('productField').value = product;
   document.getElementById('selectedProduct').innerText = "You are ordering: " + product;
   document.getElementById('confirmDialog').style.display = 'flex';
   document.getElementById('successMsg').style.display = 'none';
 }
-
 function closeOrder(){
   document.getElementById('confirmDialog').style.display = 'none';
 }
-
 function submitForm(event){
   event.preventDefault();
   const form = document.getElementById('orderForm');
-  const iframe = document.getElementsByName('hiddenFrame')[0];
-  // Submit the form via hidden iframe
   form.submit();
   document.getElementById('successMsg').style.display = 'block';
   form.reset();
   setTimeout(closeOrder, 3000);
 }
 </script>
+
+<script type="module">
+  import { initializeApp } 
+    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } 
+    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+  import { getFirestore } 
+    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  import { getStorage } 
+    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
+    authDomain: "hamsasarees-24738.firebaseapp.com",
+    projectId: "hamsasarees-24738",
+    storageBucket: "hamsasarees-24738.firebasestorage.app",
+    messagingSenderId: "16303342424",
+    appId: "1:16303342424:web:d68d26160d45472713db2d",
+    measurementId: "G-1G1HQGJ5XS"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
+  const storage = getStorage(app);
+
+  // Expose current user for simple checks
+  window.currentUser = null;
+
+  // Auth actions
+  const signInBtn = document.getElementById('signInBtn');
+  const signUpBtn = document.getElementById('signUpBtn');
+  const signOutBtn = document.getElementById('signOutBtn');
+  const loginModal = document.getElementById('loginModal');
+  const loginErr = document.getElementById('loginErr');
+
+  signInBtn.addEventListener('click', async () => {
+    const email = document.getElementById('loginEmail').value.trim();
+    const pass = document.getElementById('loginPass').value;
+    loginErr.style.display = 'none';
+    try{
+      await signInWithEmailAndPassword(auth, email, pass);
+      // success handled by onAuthStateChanged
+    }catch(e){
+      loginErr.innerText = e.message || 'Sign in failed';
+      loginErr.style.display = 'block';
+    }
+  });
+
+  signUpBtn.addEventListener('click', async () => {
+    const email = document.getElementById('loginEmail').value.trim();
+    const pass = document.getElementById('loginPass').value;
+    loginErr.style.display = 'none';
+    try{
+      await createUserWithEmailAndPassword(auth, email, pass);
+      // success handled by onAuthStateChanged
+    }catch(e){
+      loginErr.innerText = e.message || 'Sign up failed';
+      loginErr.style.display = 'block';
+    }
+  });
+
+  signOutBtn.addEventListener('click', async () => {
+    await signOut(auth);
+  });
+
+  onAuthStateChanged(auth, (user) => {
+    window.currentUser = user;
+    const userName = document.getElementById('userName');
+    const signOutBtnEl = document.getElementById('signOutBtn');
+    if(user){
+      // hide login modal
+      loginModal.style.display = 'none';
+      userName.style.display = 'inline-block';
+      userName.innerText = 'Signed in as ' + (user.email || 'User');
+      signOutBtnEl.style.display = 'inline-block';
+      // clear login inputs
+      document.getElementById('loginEmail').value = '';
+      document.getElementById('loginPass').value = '';
+      document.getElementById('loginErr').style.display = 'none';
+    }else{
+      // show login modal
+      loginModal.style.display = 'flex';
+      userName.style.display = 'none';
+      signOutBtnEl.style.display = 'none';
+    }
+  });
+
+</script>
+
 </body>
 </html>
