--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
   .order-btn { width:100%; padding:12px; background:#e91e63; color:white; border:none; border-radius:8px; font-size:18px; cursor:pointer; }
   .order-btn:hover { background:#c2185b; }
 
-  /* LOGIN MODAL (shows first) */
+  /* LOGIN MODAL (Google only) */
   #loginModal { position:fixed; inset:0; display:flex; align-items:center; justify-content:center; background:rgba(0,0,0,0.7); z-index:100000; }
-  #loginBox { background:white; padding:20px; border-radius:12px; width:95%; max-width:420px; box-shadow:0 0 20px rgba(0,0,0,0.4); }
-  #loginBox h2 { margin:0 0 12px 0; text-align:center; }
-  #loginBox input { width:100%; padding:10px; margin-bottom:12px; border:1px solid #ccc; border-radius:8px; font-size:16px; }
-  #loginButtons { display:flex; gap:10px; }
-  .btn { padding:10px; border-radius:8px; border:none; cursor:pointer; font-size:16px; flex:1; }
-  .btn-primary { background:#2196f3; color:white; }
-  .btn-ghost { background:#eee; color:#333; }
-  #googleBtn { background:#fff; color:#444; border:1px solid #ddd; display:flex; align-items:center; justify-content:center; gap:8px; }
-  #loginErr { color:red; text-align:center; margin-bottom:8px; display:none; }
+  #loginBox { background:white; padding:20px; border-radius:12px; width:95%; max-width:420px; box-shadow:0 0 20px rgba(0,0,0,0.4); text-align:center }
+  #loginBox h2 { margin:0 0 12px 0; }
+  .btn { padding:10px; border-radius:8px; border:none; cursor:pointer; font-size:16px; }
+  #googleBtn { background:#fff; color:#444; border:1px solid #ddd; display:inline-flex; align-items:center; justify-content:center; gap:8px; padding:12px 16px; }
+  #loginErr { color:red; text-align:center; margin-top:10px; display:none; word-break:break-word; }
+  #userBadge { background:#fff3; padding:6px 10px; border-radius:6px; font-size:14px }
 
   /* ORDER FORM POPUP */
   #confirmDialog { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:99999; justify-content:center; align-items:center; padding:20px; }
@@ -91,20 +88,14 @@
 
 <iframe name="hiddenFrame" style="display:none;"></iframe>
 
-<!-- LOGIN MODAL (shown first) -->
+<!-- LOGIN MODAL (Google only) -->
 <div id="loginModal">
   <div id="loginBox">
-    <h2>Sign in to continue</h2>
-    <div id="loginErr"></div>
-    <input type="email" id="loginEmail" placeholder="Email" required />
-    <input type="password" id="loginPass" placeholder="Password" required />
-    <div id="loginButtons">
-      <button class="btn btn-primary" id="signInBtn">Sign In</button>
-      <button class="btn btn-ghost" id="signUpBtn">Create Account</button>
-    </div>
-    <div style="height:8px"></div>
+    <h2>Sign in with Google to continue</h2>
+    <p style="color:#666; margin-bottom:12px;">Tap the button below — no typing needed.</p>
     <button class="btn" id="googleBtn"> <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 48 48'><path fill='%23EA4335' d='M24 9.5c3.9 0 7.3 1.3 10 3.6l7.3-7.3C36.6 2 30.8 0 24 0 14.7 0 6.9 4.7 2.7 11.5l8.9 6.9C13.7 13.2 18.3 9.5 24 9.5z'/><path fill='%234285F4' d='M46.5 24.5c0-1.6-.1-3.1-.4-4.6H24v9.1h12.6c-.5 2.7-2 5-4.3 6.6l6.9 5.3c4-3.7 6.3-9 6.3-16.4z'/><path fill='%23FBBC05' d='M9.6 28.4c-1.1-3.2-1.1-6.6 0-9.8L.7 12.8C-2.7 17.7-2.7 30.3.7 35.2l8.9-6.8z'/><path fill='%2340A057' d='M24 48c6.6 0 12.2-2.2 16.3-6l-6.9-5.3c-3 2-6.9 3.1-9.4 3.1-5.7 0-10.3-3.7-12.4-8.6l-8.9 6.9C6.9 43.3 14.7 48 24 48z'/></svg>' alt='G' style='vertical-align:middle'/> Sign in with Google</button>
-    <p style="text-align:center; margin-top:10px; font-size:13px; color:#666;">By signing in you can place orders. No account info is stored on this page.</p>
+    <div id="loginErr"></div>
+    <p style="margin-top:12px; font-size:13px; color:#666;">If popup is blocked, allow popups for this site or try again.</p>
   </div>
 </div>
 
@@ -116,7 +107,7 @@ function openOrder(product){
   if(!window.currentUser){
     // show login modal if not signed in
     document.getElementById('loginModal').style.display = 'flex';
-    document.getElementById('loginErr').innerText = 'Please sign in first to place an order.';
+    document.getElementById('loginErr').innerText = 'Please sign in with Google to place an order.';
     document.getElementById('loginErr').style.display = 'block';
     return;
   }
@@ -142,7 +133,7 @@ function submitForm(event){
 <script type="module">
   import { initializeApp } 
     from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged, GoogleAuthProvider, signInWithPopup } 
+  import { getAuth, signOut, onAuthStateChanged, GoogleAuthProvider, signInWithPopup } 
     from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
   import { getFirestore } 
     from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
@@ -168,104 +159,61 @@ function submitForm(event){
   // Expose current user for simple checks
   window.currentUser = null;
 
-  // Auth actions
-  const signInBtn = document.getElementById('signInBtn');
-  const signUpBtn = document.getElementById('signUpBtn');
-  const signOutBtn = document.getElementById('signOutBtn');
   const googleBtn = document.getElementById('googleBtn');
   const loginModal = document.getElementById('loginModal');
   const loginErr = document.getElementById('loginErr');
+  const signOutBtn = document.getElementById('signOutBtn');
+  const userName = document.getElementById('userName');
 
-  signInBtn.addEventListener('click', async () => {
-    const email = document.getElementById('loginEmail').value.trim();
-    const pass = document.getElementById('loginPass').value;
-    loginErr.style.display = 'none';
-    console.log('Attempt signIn', email);
-    try {
-      const cred = await signInWithEmailAndPassword(auth, email, pass);
-      console.log('signIn success', cred.user);
-    } catch (e) {
-      console.error('signIn error', e.code, e.message);
-      if (e.code === 'auth/user-not-found') {
-        loginErr.innerText = 'Account illa — Create Account press pannunga.';
-      } else if (e.code === 'auth/wrong-password') {
-        loginErr.innerText = 'Password thavaru. Reset pannala try pannunga.';
-      } else if (e.code === 'auth/invalid-email') {
-        loginErr.innerText = 'Email format thavaru — sariyaa type pannunga.';
-      } else {
-        loginErr.innerText = e.message || 'Sign in failed';
-      }
-      loginErr.style.display = 'block';
-    }
-  });
-
-  signUpBtn.addEventListener('click', async () => {
-    const email = document.getElementById('loginEmail').value.trim();
-    const pass = document.getElementById('loginPass').value;
-    loginErr.style.display = 'none';
-    console.log('Attempt signUp', email);
-    if (!email || !pass) {
-      loginErr.innerText = 'Email & password kudunga.';
-      loginErr.style.display = 'block';
-      return;
-    }
-    if (pass.length < 6) {
-      loginErr.innerText = 'Password minimum 6 characters venum.';
-      loginErr.style.display = 'block';
-      return;
-    }
-    try {
-      const cred = await createUserWithEmailAndPassword(auth, email, pass);
-      console.log('signUp success', cred.user);
-    } catch (e) {
-      console.error('signUp error', e.code, e.message);
-      if (e.code === 'auth/email-already-in-use') {
-        loginErr.innerText = 'Ippo already registered — Sign In pannunga.';
-      } else if (e.code === 'auth/invalid-email') {
-        loginErr.innerText = 'Email format thavaru.';
-      } else {
-        loginErr.innerText = e.message || 'Sign up failed';
-      }
-      loginErr.style.display = 'block';
-    }
-  });
-
+  // Google sign-in
   googleBtn.addEventListener('click', async () => {
     loginErr.style.display = 'none';
     try{
+      // popup-based sign-in
       const result = await signInWithPopup(auth, provider);
       console.log('Google sign-in success', result.user);
     }catch(e){
       console.error('Google sign-in error', e.code, e.message);
-      loginErr.innerText = e.message || 'Google sign-in failed';
+      // friendly messages
+      if(e.code === 'auth/popup-blocked'){
+        loginErr.innerText = 'Popup blocked. Allow popups for this site.';
+      } else if(e.code === 'auth/cancelled-popup-request'){
+        loginErr.innerText = 'Popup cancelled. Try again.';
+      } else if(e.code === 'auth/unauthorized-domain'){
+        loginErr.innerText = 'Domain not authorized in Firebase console. Add your GitHub Pages domain.';
+      } else {
+        loginErr.innerText = e.message || 'Google sign-in failed';
+      }
       loginErr.style.display = 'block';
     }
   });
 
+  // Sign out
   signOutBtn.addEventListener('click', async () => {
     await signOut(auth);
   });
 
   onAuthStateChanged(auth, (user) => {
     window.currentUser = user;
-    const userName = document.getElementById('userName');
-    const signOutBtnEl = document.getElementById('signOutBtn');
     if(user){
-      // hide login modal
+      // hide login modal and show user badge
       loginModal.style.display = 'none';
       userName.style.display = 'inline-block';
       userName.innerText = 'Signed in as ' + (user.displayName || user.email || 'User');
-      signOutBtnEl.style.display = 'inline-block';
-      // clear login inputs
-      document.getElementById('loginEmail').value = '';
-      document.getElementById('loginPass').value = '';
-      document.getElementById('loginErr').style.display = 'none';
-    }else{
+      signOutBtn.style.display = 'inline-block';
+    } else {
       // show login modal
       loginModal.style.display = 'flex';
       userName.style.display = 'none';
-      signOutBtnEl.style.display = 'none';
+      signOutBtn.style.display = 'none';
     }
+  });
+
+  // Auto-open modal on load (if not signed in)
+  window.addEventListener('load', () => {
+    setTimeout(() => {
+      if(!window.currentUser) document.getElementById('loginModal').style.display = 'flex';
+    }, 200);
   });
 
 </script>
